--- a/_sass/landing-page.scss
+++ b/_sass/landing-page.scss
@@ -11,11 +11,21 @@
 }
 
 .testimonial {
-	background: #f5f5f5;
+	// background: ;
+
+	background: #f5f5f5 url(/images/crowd.png) no-repeat center;
+    // -webkit-background-size: contain;
+    // -moz-background-size: contain;
+    // -o-background-size: contain;
+	// background-size: contain;
+	// opacity: 0.5;
 	margin: 0;
 	padding: 100px 0;
 
 	.testimonial-block {
+
+		background-color: rgba(255, 255, 255, 1);
+		// background-
 		max-width: 750px;
 		width: 98%;
 		margin: 0 auto;
@@ -29,6 +39,10 @@
 			}
 		}
 	}
+}
+
+.testimonial + section {
+	padding-top: 100px;
 }
 
 .hero {
