New image and additonal text

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -69,11 +69,11 @@ header {
 }
 
 section {
-	padding: 100px 0;
+	padding: 50px 0;
 }
 
 section + section {
-	padding-top: 0;
+	padding-top: 20px;
 }
 
 .subtext {
