--- a/_sass/landing-page.scss
+++ b/_sass/landing-page.scss
@@ -10,6 +10,11 @@
 	}
 }
 
+section:nth-of-type(odd){
+	background-color: #f5f5f5;
+  }
+
+
 .testimonial {
 	// background: ;
 
@@ -24,7 +29,8 @@
 
 	.testimonial-block {
 
-		background-color: rgba(255, 255, 255, 1);
+		font-size: 1.3em;
+		background-color: rgba(255, 255, 255, 0.9);
 		// background-
 		max-width: 750px;
 		width: 98%;
