--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,62 +1,88 @@
 <!doctype html>
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		{% seo %}
-		{% feed_meta %}
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
-		<link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon.png">
+	{% seo %}
+	{% feed_meta %}
 
-		{% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
-			<script>
-				window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-				ga('create', '{{ site.google_analytics_key }}', 'auto');
-				ga('send', 'pageview');
-			</script>
-			<script async src='https://www.google-analytics.com/analytics.js'></script>
-		{% endif %}
-	</head>
-	<body>
-		<header>
-			<div class="container">
-				<div class="company-name"><a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/logo-banner.png" alt="Hydra Logo" width="95" height="33" /></a></div>
-				{% include navigation.html %}
-			</div>
-		</header>
-		{{ content }}
-		<footer>
-			<div class="container">
-				<p class="editor-link"><a href="cloudcannon:collections/_data/footer.yml" class="btn"><strong>&#9998;</strong> Edit footer</a></p>
-				<div class="footer-columns">
-					{% for column in site.data.footer %}
-					<ul class="footer-links">
-						{% for link in column.links %}
-							<li><a {% if link.new_window %}target="_blank"{% endif %} href="{% include relative-src.html src=link.link %}" {% if link.social_icon %}class="{{ link.social_icon }}-icon"{% endif %}>
-								{% if link.social_icon %}
-									{% include social-icon.html icon=link.social_icon %}
-								{% endif %}
-								{{ link.name }}</a></li>
-						{% endfor %}
-					</ul>
-					{% endfor %}
-				</div>
-				<p class="copyright">&copy; {{ site.time | date: '%Y' }} Proactive System Ltd </p>
-				<p class="copyright"> {{ site.data.footer.address }} </p>
-				<p class="copyright">
-						<a href="tel:{{ site.data.footer.tel }}"> {{ site.data.footer.tel }}</a>
-				</p>
-				<p class="copyright"> <a href="mailto:{{ site.data.footer.email }}">{{ site.data.footer.email }}</a> </p>
-			</div>
-		</footer>
-		<script>
-			document.getElementById("open-nav").onclick = function () {
-				document.body.classList.toggle("nav-open");
-				return false;
+	<link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
+	<link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon.png">
+
+	{% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
+	<script>
+		window.ga = window.ga || function () { (ga.q = ga.q || []).push(arguments) }; ga.l = +new Date;
+		ga('create', '{{ site.google_analytics_key }}', 'auto');
+		ga('send', 'pageview');
+	</script>
+	<script async src='https://www.google-analytics.com/analytics.js'></script>
+	{% endif %}
+
+	<!-- Facebook Pixel Code -->
+	<script>
+		!function (f, b, e, v, n, t, s) {
+			if (f.fbq) return; n = f.fbq = function () {
+				n.callMethod ?
+				n.callMethod.apply(n, arguments) : n.queue.push(arguments)
 			};
-		</script>
-	</body>
+			if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+			n.queue = []; t = b.createElement(e); t.async = !0;
+			t.src = v; s = b.getElementsByTagName(e)[0];
+			s.parentNode.insertBefore(t, s)
+		}(window, document, 'script',
+			'https://connect.facebook.net/en_US/fbevents.js');
+		fbq('init', '625845564501319');
+		fbq('track', 'PageView');
+	</script>
+	<noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=625845564501319&ev=PageView&noscript=1" /></noscript>
+	<!-- End Facebook Pixel Code -->
+
+</head>
+
+<body>
+	<header>
+		<div class="container">
+			<div class="company-name"><a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/logo-banner.png" alt="Hydra Logo"
+					 width="95" height="33" /></a></div>
+			{% include navigation.html %}
+		</div>
+	</header>
+	{{ content }}
+	<footer>
+		<div class="container">
+			<p class="editor-link"><a href="cloudcannon:collections/_data/footer.yml" class="btn"><strong>&#9998;</strong> Edit
+					footer</a></p>
+			<div class="footer-columns">
+				{% for column in site.data.footer %}
+				<ul class="footer-links">
+					{% for link in column.links %}
+					<li><a {% if link.new_window %}target="_blank" {% endif %} href="{% include relative-src.html src=link.link %}" {%
+						 if link.social_icon %}class="{{ link.social_icon }}-icon" {% endif %}>
+							{% if link.social_icon %}
+							{% include social-icon.html icon=link.social_icon %}
+							{% endif %}
+							{{ link.name }}</a></li>
+					{% endfor %}
+				</ul>
+				{% endfor %}
+			</div>
+			<p class="copyright">&copy; {{ site.time | date: '%Y' }} Proactive System Ltd </p>
+			<p class="copyright"> {{ site.data.footer.address }} </p>
+			<p class="copyright">
+				<a href="tel:{{ site.data.footer.tel }}"> {{ site.data.footer.tel }}</a>
+			</p>
+			<p class="copyright"> <a href="mailto:{{ site.data.footer.email }}">{{ site.data.footer.email }}</a> </p>
+		</div>
+	</footer>
+	<script>
+		document.getElementById("open-nav").onclick = function () {
+			document.body.classList.toggle("nav-open");
+			return false;
+		};
+	</script>
+</body>
+
 </html>
