--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
 		!function (f, b, e, v, n, t, s) {
 			if (f.fbq) return; n = f.fbq = function () {
 				n.callMethod ?
-				n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+					n.callMethod.apply(n, arguments) : n.queue.push(arguments)
 			};
 			if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
 			n.queue = []; t = b.createElement(e); t.async = !0;
@@ -39,6 +39,8 @@
 	</script>
 	<noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=625845564501319&ev=PageView&noscript=1" /></noscript>
 	<!-- End Facebook Pixel Code -->
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+	 crossorigin="anonymous"></script>
 
 </head>
 
@@ -77,6 +79,8 @@
 			<p class="copyright"> <a href="mailto:{{ site.data.footer.email }}">{{ site.data.footer.email }}</a> </p>
 		</div>
 	</footer>
+
+
 	<script>
 		document.getElementById("open-nav").onclick = function () {
 			document.body.classList.toggle("nav-open");
