--- a/css/screen.scss
+++ b/css/screen.scss
@@ -5,6 +5,7 @@
 @import "variables";
 @import "elements";
 @import "landing-page";
+@import "ribbon";
 @import "layout";
 @import "pricing";
 @import "staff";
